added login functionality and other common components

--- a/src/app/components/outstanding-details/outstanding-details.component.html
+++ b/src/app/components/outstanding-details/outstanding-details.component.html
@@ -1,1 +1,6 @@
-<p>outstanding-details works!</p>
+<div>
+    <span>Name: </span><span>XYZ</span>
+</div>
+<div>
+    <span>Outstanding Amount: </span><span>1200</span>
+</div>
