added roboto font and common heading, para, lbl style

--- a/src/app/components/tenants/tenants.component.html
+++ b/src/app/components/tenants/tenants.component.html
@@ -3,28 +3,28 @@
 <div class="row">
 
     <div class="row mt-1">
-        <label class="col-1">Name</label>
+        <label class="col-1 lbl">Name</label>
         <div class="col-2">
             <input type="text" class="form-control form-control-sm" id="name" name="name" [(ngModel)]="tenantModel.name">
         </div>
     </div>
 
     <div class="form-group row mt-2">
-        <label class="col-1">Address</label>
+        <label class="col-1 lbl">Address</label>
         <div class="col-6">
             <textarea class="col-4" id="address" name="address" [(ngModel)]="tenantModel.address"></textarea>
         </div>
     </div>
 
     <div class="row form-group mt-1">
-        <label class="col-1">Adhar No</label>
+        <label class="col-1 lbl">Adhar No</label>
         <div class="col-2">
             <input type="text" id="uin" name="uin" class="form-control form-control-sm" [(ngModel)]="tenantModel.uin">
         </div>
     </div>
 
     <div class="row form-group mt-2">
-        <label class="col-1">Rent Start</label>
+        <label class="col-1 lbl">Rent Start</label>
         <div class="col-2">
             <input type="text" id="rentStartDate" name="rentStartDate" class="form-control form-control-sm" [(ngModel)]="tenantModel.rentStartDate">
         </div>
