--- a/src/app/common.scss
+++ b/src/app/common.scss
@@ -1,17 +1,20 @@
 .heading {
-    font-size: 22px;
-    color: #808080;
+    font-size: 20px;
+    font-weight: 500;
+    color: #000000de;
+    font-family: 'Roboto', sans-serif;
 }
 
 .lbl {
-    color: #9d9292;
-    font-weight: 400;
-    font-size: 16px;
+    color: #0000008a;
+    font-size: 15px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .p-text {
-    font-weight: 500;
-    color: #000;
+    color: #000000d1;
+    font-size: 15px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .ag-theme-balham {
@@ -19,13 +22,16 @@
         background: #44c4e740;
         border-color: #44c4e79c;
     }
+
     .ag-root-wrapper {
         border-color: #44c4e79c;
     }
+
     .ag-header-cell-text {
         font-size: 14px;
         color: black;
     }
+
     .ag-ltr {
         .ag-cell {
             font-size: 14px;
@@ -45,6 +51,7 @@
     background-color: #fff;
     color: #00e0ed;
     border-color: #00e0ed;
+
     &:hover {
         color: #fff;
         background-color: #00e0ed;
