angular_material_tenantchanges

--- a/src/app/components/common/header/header.component.html
+++ b/src/app/components/common/header/header.component.html
@@ -1,36 +1,13 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Room Management System</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent" >
-        <ul class="navbar-nav mr-auto offset-9">
-            <li class="nav-item active">
-                <a class="nav-link" >Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/tenants">Tenants</a>
-            </li>
-            <!-- <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </li> -->
-            <!-- <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-            </li> -->
-        </ul>
-        <!-- <form class="form-inline my-2 my-lg-0"> -->
-        <!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"> -->
-        <img src="" alt="">
-        <button class="btn primary-btn" (click)="onLogout()">Logout</button>
-        <!-- </form> -->
-    </div>
-</nav>
+<mat-toolbar>
+    <img src="/assets/rent_logo.jpg" height="65" width="75" alt="Room">
+    <span>Rent System</span>
+    <div class="spacer"></div>
+      <a mat-button>Dashoard</a>
+      <a mat-button routerLink="/tenants">Tenant</a>
+      <a mat-button routerLink="/outstandings">Outstanding</a>
+      <a mat-button [matMenuTriggerFor]="menu">Profile</a>
+        <mat-menu #menu="matMenu">
+            <button mat-menu-item>View Profile</button>
+            <button mat-menu-item>Logout</button>
+        </mat-menu>
+</mat-toolbar>
