--- a/src/app/components/common/footer/footer.component.html
+++ b/src/app/components/common/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+<!-- Footer -->
+<footer class="page-footer font-small blue fixed-bottom">
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2022 Copyright:
+      <a href="" style="color: white"> Roomrent.com</a> 
+      </div>
+    <!-- Copyright -->
+  </footer>
+<!-- Footer -->
