--- a/src/app/components/tenants/tenants.component.html
+++ b/src/app/components/tenants/tenants.component.html
@@ -42,7 +42,7 @@
             <button type="button"  mat-raised-button (click)="fileInput.click()">Select Profile</button>
             <input hidden (change)="onFileSelected()" #fileInput type="file" id="file" >
             &nbsp;<mat-checkbox class="example-margin" style="margin-left: 90px"  id="isActive" name="isActive" [(ngModel)]="tenantModel.isActive">Is Active</mat-checkbox>
-            <button style="margin-left: 65%" mat-raised-button>Save</button>
+            <button style="margin-left: 65%" mat-raised-button (click)="onSave()">Save</button>
             &nbsp;<button mat-raised-button>Clear</button>
         </section>
     <br>
