--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-header *ngIf="location.path() !== '/login' "></app-header>
+<app-header *ngIf="location.path() !== '/login'"></app-header>
 <router-outlet></router-outlet>
-<app-footer></app-footer>
+<app-footer *ngIf="location.path() !== '/login'"></app-footer>
