--- a/src/app/components/tenants/tenants.component.html
+++ b/src/app/components/tenants/tenants.component.html
@@ -1,50 +1,56 @@
 <div class="container">
+
+  <form autocomplete="off" [formGroup]="tenantForm">
     <p>
         <mat-form-field appearance="outline">
             <mat-label>Room No</mat-label>
-            <input matInput placeholder="Enter Room No"  id="roomNo" name="roomNo" [(ngModel)]="tenantModel.roomNo">
+            <input matInput placeholder="Enter Room No"  id="roomNo" name="roomNo"  formControlName="roomNo" [(ngModel)]="tenantModel.roomNo" required>
+            <mat-error *ngIf="tenantForm.controls['roomNo'].invalid">{{onFormValidation(tenantForm.controls['roomNo'],'roomNo',3)}}</mat-error>
         </mat-form-field>
 
         &nbsp;<mat-form-field appearance="outline">
             <mat-label>Name</mat-label>
-            <input matInput placeholder="Enter Name"  id="name" name="name" [(ngModel)]="tenantModel.name">
+            <input matInput placeholder="Enter Name"  id="name" name="name" formControlName="name" [(ngModel)]="tenantModel.name">
+            <mat-error *ngIf="tenantForm.controls['name'].invalid">{{onFormValidation(tenantForm.controls['name'],'name',30)}}</mat-error>
         </mat-form-field>
 
         &nbsp;<mat-form-field appearance="outline">
             <mat-label>Address</mat-label>
-            <input matInput placeholder="Enter Address" id="address" name="address" [(ngModel)]="tenantModel.address">
+            <textarea matInput placeholder="Enter Address" id="address" name="address" formControlName="address"  rows="1" [(ngModel)]="tenantModel.address"></textarea>
+            <mat-error *ngIf="tenantForm.controls['address'].invalid">{{onFormValidation(tenantForm.controls['address'],'address')}}</mat-error>
         </mat-form-field>
 
         &nbsp;<mat-form-field appearance="outline">
             <mat-label>Adhar No</mat-label>
-            <input matInput placeholder="Enter Adhar No" id="adharno" name="adharno" [(ngModel)]="tenantModel.uin">
+            <input matInput placeholder="Enter Adhar No" id="adharno" name="adharno" formControlName="uin" [(ngModel)]="tenantModel.uin">
+            <mat-error *ngIf="tenantForm.controls['uin'].invalid">{{onFormValidation(tenantForm.controls['uin'],'adhar no',12)}}</mat-error>
         </mat-form-field>
 
         &nbsp;<mat-form-field appearance="outline">
             <mat-label>Deposit Amount</mat-label>
-            <input matInput placeholder="Enter Deposit Amount" id="depositAmount" name="depositAmount" [(ngModel)]="tenantModel.depositAmount">
+            <input matInput placeholder="Enter Deposit Amount" id="depositAmount" name="depositAmount" formControlName="depositAmount" [(ngModel)]="tenantModel.depositAmount">
+            <mat-error *ngIf="tenantForm.controls['depositAmount'].invalid">{{onFormValidation(tenantForm.controls['depositAmount'],'depositAmount')}}</mat-error>
         </mat-form-field>
 
         &nbsp;<mat-form-field appearance="outline">
-            <mat-label>Rent / Start Date - End Date</mat-label>
-            <mat-date-range-input [rangePicker]="picker">
-              <input matStartDate placeholder="Start date" [(ngModel)]="tenantModel.rentStartDate">
-              <input matEndDate placeholder="End date">
-            </mat-date-range-input>
-            <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-date-range-picker #picker></mat-date-range-picker>
-          </mat-form-field>
-          
+            <mat-label>Rent Start Date</mat-label>
+            <input matInput [matDatepicker]="picker1"  formControlName="rentStartDate">
+            <mat-error *ngIf="tenantForm.controls['rentStartDate'].invalid">{{onFormValidation(tenantForm.controls['rentStartDate'],'rentStartDate')}}</mat-error>
+            <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+            <mat-datepicker #picker1></mat-datepicker>
+          </mat-form-field>          
     </p>
     
         <section class="example-section">
-            <button type="button"  mat-raised-button (click)="fileInput.click()">Select Profile</button>
-            <input hidden (change)="onFileSelected()" #fileInput type="file" id="file" >
-            &nbsp;<mat-checkbox class="example-margin" style="margin-left: 90px"  id="isActive" name="isActive" [(ngModel)]="tenantModel.isActive">Is Active</mat-checkbox>
+            <input type='file' (change)="insertProfilePic($event)" id="file" name="file" formControlName="file" required>
+            <mat-error *ngIf="tenantForm.controls['rentStartDate'].invalid">{{onFormValidation(tenantForm.controls['file'],'file')}}</mat-error>
+            <!-- <img src="http://localhost:4000/rent_logo.jpg"> -->
+            &nbsp;<mat-checkbox class="example-margin" style="margin-left: 90px"  id="isActive" name="isActive" formControlName="isActive" [(ngModel)]="tenantModel.isActive">Is Active</mat-checkbox>
             <button style="margin-left: 65%" mat-raised-button (click)="onSave()">Save</button>
             &nbsp;<button mat-raised-button>Clear</button>
         </section>
+    </form>
+
     <br>
     <div class="row">
         <ag-grid-angular style="width: 100%;height: 400px;" class="ag-theme-balham" [rowData]="rowData" [columnDefs]="columnDefs"></ag-grid-angular>
