outstanding details logical part added

--- a/src/app/common.scss
+++ b/src/app/common.scss
@@ -1,20 +1,25 @@
+* {
+    font-family: 'Roboto', sans-serif;
+}
+
+p {
+    margin-bottom: 0;
+}
+
 .heading {
     font-size: 20px;
     font-weight: 500;
     color: #000000de;
-    font-family: 'Roboto', sans-serif;
 }
 
 .lbl {
     color: #0000008a;
     font-size: 15px;
-    font-family: 'Roboto', sans-serif;
 }
 
 .p-text {
     color: #000000d1;
     font-size: 15px;
-    font-family: 'Roboto', sans-serif;
 }
 
 .ag-theme-balham {
