--- a/src/app/components/common/header/header.component.html
+++ b/src/app/components/common/header/header.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent" >
         <ul class="navbar-nav mr-auto offset-9">
             <li class="nav-item active">
-                <a class="nav-link" >Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" routerLink="/outstandings">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" routerLink="/tenants">Tenants</a>
