--- a/src/app/components/tenants/tenants.component.html
+++ b/src/app/components/tenants/tenants.component.html
@@ -42,7 +42,7 @@
     </p>
     
         <section class="example-section">
-            <input type='file' (change)="insertProfilePic($event)" id="file" name="file" formControlName="file" required>
+            <input type='file' (change)="getImageData($event)" id="file" name="file" formControlName="file" required>
             <mat-error *ngIf="tenantForm.controls['rentStartDate'].invalid">{{onFormValidation(tenantForm.controls['file'],'file')}}</mat-error>
             <!-- <img src="http://localhost:4000/rent_logo.jpg"> -->
             &nbsp;<mat-checkbox class="example-margin" style="margin-left: 90px"  id="isActive" name="isActive" formControlName="isActive" [(ngModel)]="tenantModel.isActive">Is Active</mat-checkbox>
