--- a/src/app/components/outstanding-list/outstanding-list.component.html
+++ b/src/app/components/outstanding-list/outstanding-list.component.html
@@ -6,7 +6,8 @@
 </div> -->
 <div>
     <h2 class="heading">Outstanding List</h2>
+    <p>Total Outstanding: <span>500000</span></p>
 </div>
 
-<ag-grid-angular style="width: 100%;height: 500px;" class="ag-theme-balham" [rowData]="rowData" [columnDefs]="columnDefs" [getRowId]="getRowId" (gridReady)="onGridReady($event)" (cellClicked)="onCellClicked($event)"></ag-grid-angular>
+<ag-grid-angular #agGrid style="width: 100%;height: 500px;" class="ag-theme-balham" [rowData]="rowData" [columnDefs]="columnDefs" [getRowId]="getRowId" (gridReady)="onGridReady($event)" (cellClicked)="onCellClicked($event)"></ag-grid-angular>
 <router-outlet></router-outlet>
