--- a/src/app/components/outstanding-list/outstanding-list.component.html
+++ b/src/app/components/outstanding-list/outstanding-list.component.html
@@ -4,7 +4,7 @@
 <div>
     <span>Outstanding Amount: </span><span>1200</span>
 </div> -->
-<div>
+<div style="margin-top: 60px;">
     <h2 class="heading">Outstanding List</h2>
 </div>
 
