--- a/src/app/common.scss
+++ b/src/app/common.scss
@@ -55,3 +55,15 @@
         border-color: #00e0ed;
     }
 }
+
+.cdk-overlay-container {
+    .cdk-global-overlay-wrapper {
+        justify-content: right;
+        align-items: flex-start;
+    }
+
+    .mat-snack-bar-container {
+        color: rgba(255, 255, 255);
+        background: #3f5b8df2;
+    }
+}
