--- a/src/app/components/common/header/header.component.scss
+++ b/src/app/components/common/header/header.component.scss
@@ -28,7 +28,7 @@ a:hover {
 }
 
 .loader-container {
-  position: fixed;
+  position: absolute;
   height: 100%;
   width: 100%;
   background: black;
