--- a/src/app/components/tenants/tenants.component.html
+++ b/src/app/components/tenants/tenants.component.html
@@ -1,16 +1,34 @@
-<div class="container">
+<div class="container" >
 
-  <form autocomplete="off" [formGroup]="tenantForm">
+  <form autocomplete="off" [formGroup]="tenantForm" #myForm="ngForm"
+  >
     <p>
-        <mat-form-field appearance="outline">
+        <!-- <mat-form-field appearance="outline">
             <mat-label>Room No</mat-label>
             <input matInput placeholder="Enter Room No"  id="roomNo" name="roomNo"  formControlName="roomNo" [(ngModel)]="tenantModel.roomNo" required>
             <mat-error *ngIf="tenantForm.controls['roomNo'].invalid">{{onFormValidation(tenantForm.controls['roomNo'],'roomNo',3)}}</mat-error>
-        </mat-form-field>
+        </mat-form-field> -->
+
+        <mat-form-field class="example-full-width" appearance="outline">
+            <mat-label>Room No</mat-label>
+            <input type="text"
+                   id="roomNo" name="roomNo"
+                   placeholder="Enter Room No"
+                   aria-label="Number"
+                   matInput
+                   formControlName="roomNo"
+                   [matAutocomplete]="auto" required>
+                   <mat-error *ngIf="tenantForm.controls['roomNo'].invalid">{{onFormValidation(tenantForm.controls['roomNo'],'roomNo',3)}}</mat-error>
+            <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+              <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                {{option}}
+              </mat-option>
+            </mat-autocomplete>
+          </mat-form-field>
 
         &nbsp;<mat-form-field appearance="outline">
             <mat-label>Name</mat-label>
-            <input matInput placeholder="Enter Name"  id="name" name="name" formControlName="name" [(ngModel)]="tenantModel.name">
+            <input matInput placeholder="Enter Name"  id="name" name="name" formControlName="name" >
             <mat-error *ngIf="tenantForm.controls['name'].invalid">{{onFormValidation(tenantForm.controls['name'],'name',30)}}</mat-error>
         </mat-form-field>
 
@@ -42,12 +60,20 @@
     </p>
     
         <section class="example-section">
-            <!-- <mat-error *ngIf="tenantForm.controls['rentStartDate'].invalid">{{onFormValidation(tenantForm.controls['file'],'file')}}</mat-error> -->
-            <mat-checkbox class="example-margin" id="isActive" name="isActive" formControlName="isActive" *ngIf="Mode === 'edit'"  [(ngModel)]="tenantModel.isActive">Is Active</mat-checkbox>
-            <input type='file' [ngClass]="{'file' : Mode === 'edit' }" (change)="getImageData($event)" id="file" name="file" required>
-            <img src="{{getProfilePic()}}" id="profilePics" style="height:24px" *ngIf="Mode === 'edit'"> 
-            <button mat-raised-button (click)="onSave()" style="margin-left: 50%">Save</button>
-            &nbsp;<button mat-raised-button (click)="refreshForm()">Clear</button>
+            <div class="row">
+                <div class="col-6">
+                    <mat-checkbox class="example-margin" id="isActive" name="isActive" formControlName="isActive"
+                        [hidden]="Mode === 'add'" [(ngModel)]="tenantModel.isActive">Is Active</mat-checkbox>
+                    <input type='file' [ngClass]="{'file' : Mode === 'edit' }" (change)="getImageData($event)" id="file" name="file"
+                        required>
+                    <img src="{{getProfilePic()}}" id="profilePics" style="height:24px" [hidden]="Mode === 'add'">
+                </div>
+                <div class="col-3 offset-3">
+                    <button mat-raised-button (click)="onSave()" style="margin-left: 50%">Save</button>
+                    &nbsp;<button mat-raised-button (click)="refreshForm()">Clear</button>
+                </div>
+            </div>
+
         </section>
     </form>
 
