--- a/src/app/components/common/header/header.component.html
+++ b/src/app/components/common/header/header.component.html
@@ -5,6 +5,7 @@
       <a mat-button routerLinkActive="active-link">Dashoard</a>
       <a mat-button routerLink="/tenants" routerLinkActive="active-link">Tenant</a>
       <a mat-button routerLink="/outstandings" routerLinkActive="active-link">Outstanding</a>
+      <a mat-button routerLink="/scheme" routerLinkActive="active-link">Scheme</a>
       <a mat-button [matMenuTriggerFor]="menu">Profile</a>
         <mat-menu #menu="matMenu">
             <button mat-menu-item>View Profile</button>
