lazy element module

--- a/src/app/components/webComponents/scheme-wrapper/scheme-wrapper.component.html
+++ b/src/app/components/webComponents/scheme-wrapper/scheme-wrapper.component.html
@@ -1,3 +1,3 @@
 <div class="container">
-    <app-scheme-master [tenantList]="dialogData"></app-scheme-master>
+    <app-scheme-master *axLazyElement="link" [tenantList]="dialogData"></app-scheme-master>
 </div>
